--- a/PARCIAL1/pseudo.css
+++ b/PARCIAL1/pseudo.css
@@ -1,6 +1,8 @@
 body {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: rgb(216, 239, 170);
 }
+
 /* HEADER*/
 .header{
     background-color: #333;
